# DiscreteENN-TSP

./: .gitignore  CMakeLists.txt  DiscreteENN_TSP_table.csv  DiscreteENN_TSP_table.txt  DiscreteENN_TSP_table_Ref.txt  a.out  calc_cost.py  compile_cpp.sh  compile_flags.txt  draw_lines.py  enn_tsp_data.csv  enn_tsp_data_bak.csv  main.cpp  min_distance.py  plot_data.py  runs_loop.py  test.py  tsp_discrete_enn.cpp  tsp_discrete_enn.hpp  until_fail_run.py  until_fail_run.sh  utils.hpp
Analysis/: draw_cities.py  draw_intersection.py  draw_lines.py  line_intersect.py  make_runs.sh  min_distance.py  plot_data.py  repeating.txt  runs_loop.py  show_repeating.py  until_fail.txt  until_fail_run.sh
Data/: tsp_optimal_distances.csv
Data/ALL_tsp/: a280.tsp  test5.tsp
Docs/: algo.txt
Output/: DiscreteENN_TSP_table.csv  DiscreteENN_TSP_table.txt  DiscreteENN_TSP_table_Ref.csv
include/: tsp_discrete_enn.hpp  utils.hpp
src/: main.cpp  tsp_discrete_enn.cxx
